zkay/examples/type_errors/Unreadable.sol
pragma solidity ^0.5.0;

contract Addition {

    address owner;

    uint@owner a;
    uint@owner b;

	function f() public {
		b = a + 1;
	}
}
